[package]
name = "user_net"
version = "0.1.0"
authors = ["Ashish Anand N <ashishmax31@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
nix = "0.18.0"
ifstructs = "0.1.1"
ioctl-macros = "0.1.0"
hex = "0.4.2"
rand = "0.7.3"
lazy_static = "1.4.0"
